Create common with some refacto. Added all API for User, Umbrella, Rank. Something added for sale
